--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Node.js CI/CD
 
 on:
   push:
@@ -12,13 +12,8 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
-    env:
-      PORT : 3000
-      MONGO_URI: ${{ secrets.MONGO_URI }}
-      SECRET_KEY: ${{ secrets.SECRET_KEY }}
-
+    runs-on: self-hosted
+    
     strategy:
       matrix:
         node-version: [16.x, 18.x]
@@ -33,4 +28,8 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+    - run: |
+        touch .env
+        echo "${{secrets.ENV_VARS}}" > .env
     - run: npm test
+      
