--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,5 +31,5 @@ jobs:
     - run: |
         touch .env
         echo "${{secrets.ENV_VARS}}" > .env
-    - run: npm test
+    # - run: npm test
       
