--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,5 +31,6 @@ jobs:
     - run: |
         touch .env
         echo "${{secrets.ENV_VARS}}" > .env
+    - run: pm2 restart BackendAPI
     # - run: npm test
       
