Update node.js.yml | testing run test

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,5 +32,5 @@ jobs:
         touch .env
         echo "${{secrets.ENV_VARS}}" > .env
     - run: pm2 restart BackendAPI
-    # - run: npm test
+    - run: npm test
       
