--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -29,5 +29,5 @@ jobs:
     - run: |
         touch .env
         echo "${{secrets.ENV_VARS}}" > .env
-    - run: pm2 restart BackendAPI
+    # - run: pm2 restart BackendAPI
       
